--- a/index.html
+++ b/index.html
@@ -140,7 +140,10 @@
     <div id="nuli">
         <div id="nuli1">
 
-            <p id="p_first"><span>Keep</span> - 我们一直在努力<span class="s1">NOW!</span></p>
+            <div id="nuli1-1">
+                <p><span>Keep</span> - 我们一直在努力</p>
+                <div>NOW!</div>
+            </div>
 
             <ul>
                 <li>
@@ -161,106 +164,114 @@
                 </li>
             </ul>
 
-            <p class="p2">Self-discipline gives me <span> freedom</span></p>
+            <div id="nuli1-2">
+                <p>Self-discipline gives me <span> freedom</span></p>
+            </div>
 
-            <div class="yes"><a href="">加入我们!</a></div>
+            <div class="yes">
+                <div id="yes-1">
+                    <a href="">加入我们!</a>
+                </div>
+            </div>
 
         </div>
     </div>
 
 
     <div id="end">
-        <ul id="end_u1">
-            <li>
-                <p class="end_p1">帮助中心</p>
-                <a href="###">
-                    <p>账户管理</p>
-                </a>
-                <a href="###">
-                    <p>购物指南</p>
-                </a>
-                <a href="###">
-                    <p>订单操作</p>
-                </a>
-            </li>
-            <li>
-                <p class="end_p1">服务支持</p>
-                <a href="###">
-                    <p>售后政策</p>
-                </a>
-                <a href="###">
-                    <p>自助服务</p>
-                </a>
-                <a href="###">
-                    <p>相关下载</p>
-                </a>
-            </li>
-            <li>
-                <p class="end_p1">线下门店</p>
-                <a href="###">
-                    <p>Keep之家</p>
-                </a>
-                <a href="###">
-                    <p>服务网点</p>
-                </a>
-                <a href="###">
-                    <p>授权体验店</p>
-                </a>
-            </li>
-            <li>
-                <p class="end_p1">关注我们</p>
-                <a href="###">
-                    <p>新浪微博</p>
-                </a>
-                <a href="###">
-                    <p>官方微信</p>
-                </a>
-                <a href="###">
-                    <p>联系我们</p>
-                </a>
-            </li>
-            <li>
-                <p class="end_p1">联系我们</p>
-                <div><a href="###">
-                        <p>智能客服</p>
-                    </a></div>
-                <div><a href="https://www.gotokeep.com/about#location">
+        <div id="end_kj">
+
+            <ul id="end_u1">
+                <li>
+                    <p class="end_p1">帮助中心</p>
+                    <a href="###">
+                        <p>账户管理</p>
+                    </a>
+                    <a href="###">
+                        <p>购物指南</p>
+                    </a>
+                    <a href="###">
+                        <p>订单操作</p>
+                    </a>
+                </li>
+                <li>
+                    <p class="end_p1">服务支持</p>
+                    <a href="###">
+                        <p>售后政策</p>
+                    </a>
+                    <a href="###">
+                        <p>自助服务</p>
+                    </a>
+                    <a href="###">
+                        <p>相关下载</p>
+                    </a>
+                </li>
+                <li>
+                    <p class="end_p1">线下门店</p>
+                    <a href="###">
+                        <p>Keep之家</p>
+                    </a>
+                    <a href="###">
+                        <p>服务网点</p>
+                    </a>
+                    <a href="###">
+                        <p>授权体验店</p>
+                    </a>
+                </li>
+                <li>
+                    <p class="end_p1">关注我们</p>
+                    <a href="###">
+                        <p>新浪微博</p>
+                    </a>
+                    <a href="###">
+                        <p>官方微信</p>
+                    </a>
+                    <a href="###">
                         <p>联系我们</p>
-                    </a></div>
-            </li>
-        </ul>
-
-        <div id="hzhb">
-
-            <p>全球合作伙伴</p>
-
-            <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                    </a>
+                </li>
+                <li>
+                    <p class="end_p1">联系我们</p>
+                    <div><a href="###">
+                            <p>智能客服</p>
+                        </a></div>
+                    <div><a href="https://www.gotokeep.com/about#location">
+                            <p>联系我们</p>
+                        </a></div>
+                </li>
             </ul>
+
+            <div id="hzhb">
+                <p>全球合作伙伴</p>
+
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+
+            <ul id="u3">
+                <li>
+                    <p>opyright © 2019 Keep 保留所有权利。 粤ICP备14077691号-12</p>
+                </li>
+                <li><a href="https://www.gotokeep.com/privacy">隐私政策</a></li>
+                <li><a href="###">服务条款</a></li>
+                <li><a href="###">Cookies协议</a></li>
+            </ul>
+
         </div>
-
-        <ul id="u3">
-            <li>
-                <p>opyright © 2019 Keep 保留所有权利。 粤ICP备14077691号-12</p>
-            </li>
-            <li><a href="https://www.gotokeep.com/privacy">隐私政策</a></li>
-            <li><a href="###">服务条款</a></li>
-            <li><a href="###">Cookies协议</a></li>
-        </ul>
-
     </div>
 
     <div id="xfc">
