--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Keep2.0-自律给我自由</title>
+    <link rel="icon" type="image/png" sizes="144x144" href="images/Logo.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="144x144" href="images/Logo.png">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/top.css">
@@ -19,7 +21,6 @@
     <link rel="stylesheet" href="css/goTop.css">
     <script src="https://code.jquery.com/jquery-3.5.1.js"
         integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-
     <script src="script/fuc.js"></script>
     <script src="script/onload.js"></script>
     <script src="script/onscroll.js"></script>
