--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
     <link rel="stylesheet" href="css/end.css">
     <link rel="stylesheet" href="css/xfc.css">
     <link rel="stylesheet" href="css/goTop.css">
-    <script src="https://code.jquery.com/jquery-3.5.1.js"
-        integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+    <script src="css/jquery-3.4.1/jquery-3.4.1.js"></script>
     <script src="script/fuc.js"></script>
     <script src="script/onload.js"></script>
     <script src="script/onscroll.js"></script>
