--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     </div>
 
     <div id="jump">
-        <form id="bd" action="https://www.kisssum.cf/keep2" method="get" onsubmit="return checkout()">
+        <form id="bd" action="./index.html" method="get" onsubmit="return checkout()">
             <table>
                 <tr>
                     <td>用户名:</td>
