--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <script src="script/fuc.js"></script>
     <script src="script/onload.js"></script>
     <script src="script/onscroll.js"></script>
+    <script src="script/onclick.js"></script>
+    <script src="script/time.js"></script>
 </head>
 
 <body>
@@ -130,7 +132,9 @@
 
     <div id="jsqc">
         <p>户外场地</p>
+
         <div id="jsqc-img"></div>
+
         <ul id="jsqc-u2">
             <li></li>
             <li></li>
@@ -327,7 +331,7 @@
         </ul>
     </div>
 
-    <div id="goTop" onclick="goTop()">
+    <div id="goTop">
         <span>回到顶部</span>
     </div>
 
