--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <div id="video">
         <video id="video_mp4" loop autoplay>
-            <source src="./video/yd1.mp4">
+            <source src="https://files.catbox.moe/a443l0.mp4">
         </video>
 
         <div id="video_fg">
