--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     </div>
 
     <div id="jump">
-        <form id="bd" action="./index.html" method="get" onsubmit="return checkout()">
+        <form id="bd" action="https://kisssum.gitee.io/keep2" method="get" onsubmit="return checkout()">
             <table>
                 <tr>
                     <td>用户名:</td>
