--- a/index.html
+++ b/index.html
@@ -316,18 +316,26 @@
 
     <div id="xfc">
         <ul>
-            <a href="https://www.github.com/">
-                <li><img src="./images/xfc/github_black.png" alt=""></li>
-            </a>
-            <a href="https://weibo.com/">
-                <li><img src="./images/xfc/weibo_black.png" alt=""></li>
-            </a>
-            <a href="https://www.facebook.com/">
-                <li><img src="./images/xfc/facebook_black.png" alt=""></li>
-            </a>
-            <a href="https://im.qq.com/">
-                <li><img src="./images/xfc/qq_black.png" alt=""></li>
-            </a>
+            <li>
+                <a href="https://www.github.com/">
+                    <img alt="">
+                </a>
+            </li>
+            <li>
+                <a href="https://weibo.com/">
+                    <img alt="">
+                </a>
+            </li>
+            <li>
+                <a href="https://www.facebook.com/">
+                    <img alt="">
+                </a>
+            </li>
+            <li>
+                <a href="https://im.qq.com/">
+                    <img alt="">
+                </a>
+            </li>
         </ul>
     </div>
 
