--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
 </head>
 
 <body>
-
     <div id="top">
         <ul id="top_left">
             <li><a href="###"><img src="images/Logo.png" alt=""></a></li>
@@ -40,7 +39,7 @@
         </ul>
 
         <ul id="top_right">
-            <span>搜索</span>
+            <a href="javascript:clickSearchMenu()">搜索</a>
             <input type="text">
 
             <ul id="top_right_search">
@@ -69,7 +68,6 @@
 
     <div id="ydff">
         <p id="p1">户外运动</p>
-
         <ul>
             <li>
                 <div class="d1">
@@ -132,9 +130,7 @@
 
     <div id="jsqc">
         <p>户外场地</p>
-
         <div id="jsqc-img"></div>
-
         <ul id="jsqc-u2">
             <li></li>
             <li></li>
@@ -147,7 +143,6 @@
 
     <div id="nuli">
         <div id="nuli1">
-
             <div id="nuli1-1">
                 <p><span>Keep</span> - 我们一直在努力</p>
                 <div>NOW!</div>
@@ -181,12 +176,11 @@
                     <a href="javascript:jump()">加入我们!</a>
                 </div>
             </div>
-
         </div>
     </div>
 
     <div id="jump">
-        <form id="bd" action="https://kisssum.gitee.io/keep2" method="get" onsubmit="return checkout()">
+        <form id="bd" action="nextPage/index.html" method="get" onsubmit="return checkout()">
             <table>
                 <tr>
                     <td>用户名:</td>
@@ -285,20 +279,76 @@
                 <p>全球合作伙伴</p>
 
                 <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>
+                        <a href="https://www.microsoft.com/zh-cn/" target="__blank">
+                            <img src="images/hzdx/weiruan.png">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.google.cn/intl/zh-CN/chrome/" target="__blank">
+                            <img src="images/hzdx/guge.png">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.apple.com.cn/" target="__blank">
+                            <img src="images/hzdx/pingguo.png">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.intel.cn/" target="__blank">
+                            <img src="images/hzdx/intel.png">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.amd.com/zh-hans" target="__blank">
+                            <img src="images/hzdx/AMD.png">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.nvidia.cn/" target="__blank">
+                            <img src="images/hzdx/nvidia.png">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.ibm.com/cn-zh" target="__blank">
+                            <img src="images/hzdx/ibm.png">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www8.hp.com/" target="__blank">
+                            <img src="images/hzdx/huipu.png">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.mi.com/" target="__blank">
+                            <img src="images/hzdx/xiaomi.png">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.vmall.com/" target="__blank">
+                            <img src="images/hzdx/huawei.png">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.amazon.cn/" target="__blank">
+                            <img src="images/hzdx/yamaxun.png">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.tencent.com/" target="__blank">
+                            <img src="images/hzdx/tengxun.png">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.aliyun.com/" target="__blank">
+                            <img src="images/hzdx/ali.png">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.dell.com/" target="__blank">
+                            <img src="images/hzdx/daier.png">
+                        </a>
+                    </li>
                 </ul>
             </div>
 
@@ -340,7 +390,7 @@
     </div>
 
     <div id="goTop">
-        <span>回到顶部</span>
+        <a href="javascript:clickGoTop()">回到顶部</a>
     </div>
 
 </body>
