--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
     <script src="css/jquery-3.4.1/jquery-3.4.1.js"></script>
     <script src="script/fuc.js"></script>
     <script src="script/onload.js"></script>
-    <script src="script/onscroll.js"></script>
     <script src="script/onclick.js"></script>
     <script src="script/time.js"></script>
 </head>
@@ -30,8 +29,8 @@
 <body>
     <div id="top">
         <ul id="top_left">
-            <li><a href="###"><img src="images/Logo.png" alt=""></a></li>
-            <li><a href="###">首页</a></li>
+            <li><a href="https://kisssum.gitee.io/keep2"><img src="images/Logo.png" alt=""></a></li>
+            <li><a href="https://kisssum.gitee.io/keep2">首页</a></li>
             <li><a href="https://www.gotokeep.com/training">课程</a></li>
             <li><a href="https://mall.jd.com/index-1000093043.html">商城</a></li>
             <li><a href="https://www.gotokeep.com/explore">精选</a></li>
@@ -47,6 +46,7 @@
                 <li>百度</li>
                 <li>Doge</li>
                 <li>360</li>
+                <li>搜狗</li>
             </ul>
         </ul>
     </div>
