添加video视频，修复top_right_search的bug

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <a href="javascript:clickSearchMenu()">搜索</a>
             <input type="text">
 
-            <ul id="top_right_search">
+            <ul id="top_right_search" style="display: none;">
                 <li>谷歌</li>
                 <li>百度</li>
                 <li>Doge</li>
@@ -53,7 +53,7 @@
 
     <div id="video">
         <video id="video_mp4" loop autoplay>
-            <source src="https://files.catbox.moe/a443l0.mp4">
+            <source src="video/yd1.mp4">
         </video>
 
         <div id="video_fg">
