--- a/index.html
+++ b/index.html
@@ -130,15 +130,25 @@
 
     <div id="jsqc">
         <p>户外场地</p>
-        <div id="jsqc-img"></div>
-        <ul id="jsqc-u2">
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-        </ul>
+
+        <div id="imgBox">
+            <div id="imgBoxList">
+                <img src="./images/jsqc/p1.png">
+                <img src="./images/jsqc/p2.png">
+                <img src="./images/jsqc/p3.png">
+                <img src="./images/jsqc/p4.png">
+                <img src="./images/jsqc/p5.png">
+                <img src="./images/jsqc/p1.png">
+            </div>
+    
+            <ul>
+                <li class="active"></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
     </div>
 
     <div id="nuli">
